--- a/payroll/model/templates/Home.html
+++ b/payroll/model/templates/Home.html
@@ -35,7 +35,7 @@
 
         /* Logo Style */
         .hero-section img {
-            width: 330px;
+            width: 450px;
             height: auto;
             padding-left: 15px;
             animation: rotate 5s infinite linear;
@@ -53,12 +53,12 @@
 
         /* Hero Section Text */
         .hero-section h1 {
-            font-size: 3em;
+            font-size: 7em;
             color: yellow;
             font-family: 'Orbitron', sans-serif;
             font-weight: 700;
             text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
-            margin-bottom: 20px;
+            margin-bottom: 5px;
             animation: animate 3s linear infinite;
         }
 
@@ -68,7 +68,7 @@
         }
 
         .hero-section p {
-            font-size: 1.2em;
+            font-size: 3em;
             color: #ffffff; /* Set text color to white */
             line-height: 1.5;
         }
@@ -96,11 +96,11 @@
 
     <div class="main-content">
         <div class="hero-section">
-            <img src="{{ url_for('static', filename='Spearlogo.png') }}" alt="spearlogo">
+            <img src="{{ url_for('static', filename='alar-logo.png') }}" alt="spearlogo">
         </div>
         <div class="hero-section">
-            <h1>SMART PAYROLL ENHANCED WITH AI RECOGNITION</h1>
-            <p>Register employee, manage attendance, and integrate AI for seamless recognition.</p>
+            <h1>ALAR</h1>
+            <p>AI Login Authentication And Recognition</p>
         </div>
     </div>
 
