--- a/payroll/model/templates/login.html
+++ b/payroll/model/templates/login.html
@@ -18,23 +18,24 @@
     />
 
     <style>
+      body {
+        background-color: #111733;
+        color: white;
+      }
+
       .modal {
         background-color: transparent !important;
         box-shadow: none !important;
         border: none !important;
       }
+
       #loader {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(
-          255,
-          255,
-          255,
-          0.8
-        ); /* White overlay with transparency */
+        background: rgba(255, 255, 255, 0.8); /* White overlay with transparency */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -42,7 +43,39 @@
         font-size: 1.5em; /* Larger font size for better visibility */
         color: #333; /* Darker text color for contrast */
       }
+
+      .page-title {
+        font-size: 4em;
+        color: yellow;
+        font-family: 'Orbitron', sans-serif;
+        font-weight: 700;
+        text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+        margin-bottom: 5px;
+        animation: animate 3s linear infinite;
+      }
+
+      .date-time-text {
+        font-size: 1.5em;
+        font-weight: semibold;
+      }
+
+      .card-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .card {
+        width: 100%;
+        max-width: 500px;
+      }
+
+      .btn-container {
+        display: flex;
+        justify-content: center;
+      }
     </style>
+
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-2.1.1.min.js"
@@ -64,13 +97,13 @@
     <div class="container mt-5">
       <!-- Header with Real-Time Date and Time -->
       <div class="text-center mb-4">
-        <h2>Employee Face Recognition</h2>
-        <p id="dateTime" class="text-muted"></p>
+        <h2 class="page-title">Employee Face Recognition</h2>
+        <p id="dateTime" class=" date-time-text"></p>
       </div>
 
-      <div class="row">
-        <!-- First Card -->
-        <div class="col-md-6">
+      <div class="row flex flex-row justify-content-center align-items-center">
+        <!-- Centered First Card -->
+        <div class="card-container"  style="width: 3000px;">
           <div class="card">
             <video
               id="webcam"
@@ -86,34 +119,19 @@
               style="position: absolute; top: 0; left: 0"
             ></canvas>
             <div class="card-body">
-              <h5 id="name" class="card-title">Employee Name:</h5>
               <p id="faceConfidence" class="font-weight-bold"></p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Second Card -->
-        <div class="col-md-6">
-          {% if request.args.get('account_type') %}
-          <button
-            type="button"
-            class="btn col btn-primary mb-3"
-            data-toggle="modal"
-            data-target="#uploadModal"
-          >
-            Create Face Data
-          </button>
-          {% endif %}
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Employee Information</h5>
-              <ul class="list-group list-group-flush">
-                {% for username in administrator %}
-                <li class="list-group-item">
-                  Employee Username: {{ username[0] }}
-                </li>
-                {% endfor %}
-              </ul>
+              {% if request.args.get('account_type') %}
+              <div class="btn-container">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#uploadModal"
+                >
+                  Create Face Data
+                </button>
+              </div>
+              {% endif %}
             </div>
           </div>
         </div>
