--- a/payroll/model/templates/Home.html
+++ b/payroll/model/templates/Home.html
@@ -68,9 +68,10 @@
         }
 
         .hero-section p {
-            font-size: 3em;
+            font-size: 2em;
             color: #ffffff; /* Set text color to white */
             line-height: 1.5;
+            margin-top: 10px;
         }
 
         /* Button Style */
