--- a/payroll/model/templates/login.html
+++ b/payroll/model/templates/login.html
@@ -20,7 +20,6 @@
     <style>
       body {
         background-color: #111733;
-        color: white;
       }
 
       .modal {
@@ -35,7 +34,12 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(255, 255, 255, 0.8); /* White overlay with transparency */
+        background: rgba(
+          255,
+          255,
+          255,
+          0.8
+        ); /* White overlay with transparency */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -47,7 +51,7 @@
       .page-title {
         font-size: 4em;
         color: yellow;
-        font-family: 'Orbitron', sans-serif;
+        font-family: "Orbitron", sans-serif;
         font-weight: 700;
         text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
         margin-bottom: 5px;
@@ -57,6 +61,7 @@
       .date-time-text {
         font-size: 1.5em;
         font-weight: semibold;
+        color: white;
       }
 
       .card-container {
@@ -98,12 +103,12 @@
       <!-- Header with Real-Time Date and Time -->
       <div class="text-center mb-4">
         <h2 class="page-title">Employee Face Recognition</h2>
-        <p id="dateTime" class=" date-time-text"></p>
+        <p id="dateTime" class="date-time-text"></p>
       </div>
 
       <div class="row flex flex-row justify-content-center align-items-center">
         <!-- Centered First Card -->
-        <div class="card-container"  style="width: 3000px;">
+        <div class="card-container" style="width: 3000px">
           <div class="card">
             <video
               id="webcam"
