fix title from gesture to hand gesture

--- a/payroll/model/templates/gesture.html
+++ b/payroll/model/templates/gesture.html
@@ -96,7 +96,7 @@
   <body>
     <!-- Header with Real-Time Date and Time -->
     <div class="text-center mb-4">
-      <h2 class="page-title">Employee Face Recognition</h2>
+      <h2 class="page-title">Employee Hand Gesture Recognition</h2>
       <p id="dateTime" class="date-time-text"></p>
     </div>
     <div
